@@ -1,19 +1,18 @@
 1d2bc5dc7910282b961306b039ab1e60 *COPYRIGHTS
-ef58b5eb881117a6b5ed50920963a82b *ChangeLog
-2909490e6f6c52ce3c51660f4e2f50af *DESCRIPTION
-56caf229b93b5244adc2a114b673f2aa *NAMESPACE
+be0d679415952af7bc8d00a0521fc7cb *ChangeLog
+ae2039d6076d0144919f2ed9309cd76d *DESCRIPTION
+ecb610daf5fd0517a36197bec0dbfeaf *NAMESPACE
 b41753d76c064a335752ce3ae1814976 *R/classes-spd.R
-99ecd6984fb7cc3988f16258959a7f16 *R/methods-GPD.R
-e155ca662e8206f9645fddf6c9eaa6c2 *R/methods-spdDistribution.R
-cfa591e8a353f942c820b34fef23bf8a *R/methods-spdFit.R
-b980dd92fb2521c7fcb9128411d8851c *R/methods-spdPlots.R
+42111423609d1e86c4a932e83f6095bb *R/methods-GPD.R
+967d7be00fb8bcb351ec85f31eedc6d0 *R/methods-spdDistribution.R
+28fc8c7f5c1e6116476272b8a3ad970b *R/methods-spdFit.R
+d0812c7ba8edfc6e5a4c29269b747929 *R/methods-spdPlots.R
 e523844cd0e30b2238c6441496f5e7e9 *R/misc-spd.R
-24f440bd9446e6cdf70d8bcd3c443e6a *R/zzz.R
 9093585011002b493ce7bd103c9e05c3 *inst/CITATION
 d6c7742c9e9ce62eefcfd8f9ea499a20 *man/GPDFIT-class.Rd
 a0ccd2eac9bbc559e70b1b0cd1222073 *man/GPDTAILS-class.Rd
 a7912e15a8b5f887181048b2760e0a53 *man/SPD-class.Rd
 ffb34fa0f8991f8c719cb945fb35ea21 *man/plot-methods.Rd
 9312455f288bad553edece44f184579e *man/spd-methods.Rd
-aeaa16258633dcca95fb972f9623e2d0 *man/spd-package.Rd
+7642812a5436a7303478570855982acb *man/spd-package.Rd
 d131ff54240fbe8a84e7997c0ab4c100 *man/spdfit-methods.Rd
