@@ -1,6 +1,5 @@
+importFrom(KernSmooth, bkde)
 exportClasses("SPD","GPDTAILS","GPDFIT")
 exportMethods("spdfit")
 exportMethods("pspd","dspd","qspd","rspd")
 exportMethods("show","plot")
-import(graphics)
-
