@@ -1,3 +1,8 @@
+2013-04-10  Alexios Ghalanos <alexios@4dscape.com>
+	* DESCRIPTION (Version): New version is 1.9.
+	* Removed zzz.R
+	* Some code cleanup and moved moved KernSmooth from Depends to Imports.
+	
 2012-12-20  Alexios Ghalanos <alexios@4dscape.com>
 	* DESCRIPTION (Version): New version is 1.8.
 	* Removed rseed argument from rspd (redundant). 
